--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -51,10 +51,9 @@
                 <h3>Product Description</h3>
                 <hr>
                 <p class="mt-3">{{ product.description }}</p>
-                <form class="form" action="" method="POST">
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
-                        
                         <div class="col-12">
                             <p class="mt-3"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
