--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -22,7 +22,7 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            {% if "placeholder" in product.image.url %}
+                            {% if "placeholder" in item.product.image.url %}
                             <img class="w-100" src="{% static 'images\placeholder.png' %}" alt="{{ item.product.name }}">
                             {% else %}
                             <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
