--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -39,7 +39,7 @@
                                 <tr>
                                     <td class="p-3 w-25">
                                         {% if "placeholder" in item.product.image.url %}
-                                                <img class="rounded img-fluid" src="{% static 'images\placeholder.png' %}" alt="{{ item.product.name }}">                                      
+                                                <img class="rounded img-fluid" src="{{ MEDIA_URL }}placeholder.png" alt="{{ item.product.name }}">                                      
                                             {% else %}
                                                 <img class="rounded img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                                             {% endif %}
