--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -17,7 +17,7 @@
             <div class="image-container my-5">
                 {% if "placeholder" in product.image.url %}
                 <a href="">
-                    <img class="card-img-top img-fluid" src="{% static 'images\placeholder.png' %}" alt="{{ product.name }}">
+                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}placeholder.png" alt="{{ product.name }}">
                 </a>
                 {% else %}
                 <a href="{{ product.image.url }}" target="_blank">
@@ -29,7 +29,7 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
                 <h2 class="mb-0">{{ product.name }}</h2>
-                <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                 {% if product.category %}
                 <p class="small mt-1 mb-0">
                     <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
