--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -36,8 +36,6 @@
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                                 <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                                 <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                                <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
-                                <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
                                 <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
                                 <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
                                 <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
@@ -62,7 +60,7 @@
                                     {% if "placeholder" in product.image.url %}
                                     <a href="{% url 'product_detail' product.id %}">
                                         <div class="product-image-container">
-                                            <img class="card-img-top img-fluid product-image" src="{% static 'images\placeholder.png' %}" alt="{{ product.name }}">
+                                            <img class="card-img-top img-fluid product-image" src="{{ MEDIA_URL }}placeholder.png" alt="{{ product.name }}">
                                         </div>
                                     </a>
                                     {% else %}
@@ -79,7 +77,7 @@
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                                            <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 {% if product.category %}
