--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -23,7 +23,7 @@
                     <div class="row">
                         <div class="col-3 my-1">
                             {% if "placeholder" in item.product.image.url %}
-                            <img class="w-100" src="{% static 'images\placeholder.png' %}" alt="{{ item.product.name }}">
+                            <img class="w-100" src="{{ MEDIA_URL }}placeholder.png" alt="{{ item.product.name }}">
                             {% else %}
                             <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                             {% endif %}
