--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -107,6 +107,7 @@
 
                         <!-- Display Errors -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Pass client secret to view -->
                         <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
 
