--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -94,8 +94,8 @@
                                                 {% endif %}
                                                 {% if request.user.is_superuser %}
                                                     <small class="ml-3">
-                                                        <a href="">Edit</a> |
-                                                        <a class="text-danger" href="">Delete</a>
+                                                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                                                     </small>
                                                 {% endif %}
                                             <small class="text-muted">{{ product.description|truncatechars:200 }}</small>
