--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -81,4 +81,21 @@
             </div>
         </li>
     </ul>
+    <ul class="list-unstyled d-lg-flex my-1">
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="{% url 'faqs' %}" id="specials-link">
+                FAQs
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="" id="specials-link">
+                Contact Us
+            </a>
+        </li>
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="" id="specials-link">
+                Newsletter
+            </a>
+        </li>
+    </ul>
 </div>
