--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -29,7 +29,7 @@
                     <div class="row"><div class="col-12"><small><strong>Updated On: </strong>{{ faq.updated_on }}</small></div></div>
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
-                            <a href="">Edit</a> |
+                            <a href="{% url 'edit_faq' faq.id %}">Edit</a> |
                             <a class="text-danger" href="{% url 'delete_faq' faq.id %}">Delete</a>
                         </small>
                     {% endif %}
