--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -17,6 +17,10 @@
                 <hr>
                 <h2 class="logo-font mb-4">FAQs</h2>
                 <hr>
+                <p><em>Can't find an answer to your question? Give us a call on 01782 555 123, email us at 
+                    doublewhammyguitars@gmail.com or visit our <a href="">Contact Us</a> page.</em>
+                </p>
+                <hr>
             </div>
         </div>
 
