Add contact form, template, model & view

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -88,7 +88,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="{% url 'contact' %}" id="specials-link">
                 Contact Us
             </a>
         </li>
