--- a/templates/base.html
+++ b/templates/base.html
@@ -46,26 +46,30 @@
 
 <body>
   <header class="container-fluid fixed-top">
-    <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <form method="GET" action="{% url 'products' %}">
-          <div class="input-group w-100">
-            <input class="form-control border border-black rounded-0" type="text" name="q"
-              placeholder="Search our site">
-            <div class="input-group-append">
-              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                <span class="icon">
-                  <i class="fas fa-search"></i>
-                </span>
-              </button>
+    <div id="topnav" class="row bg-dark pt-lg-2 d-none d-lg-flex">
+
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-center search-bar-lg">
+        <div class="search-bar">
+          <form method="GET" action="{% url 'products' %}">
+            <div class="input-group w-100">
+              <input class="form-control border border-black rounded-0" type="text" name="q"
+                placeholder="Search our site">
+              <div class="input-group-append">
+                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                  <span class="icon">
+                    <i class="fas fa-search"></i>
+                  </span>
+                </button>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
+      
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-center">
-        <a href="{% url 'home' %}" class="nav-link main-logo-link mx-auto">
-          <h2 class="logo-font text-black my-0"><strong>Double Whammy</strong> Guitars</h2>
-        </a>
+          <a href="{% url 'home' %}" class="nav-link main-logo-link mx-auto">
+              <img src="{% static 'images/logo.jpg' %}" alt="double-whammy-guitar-logo" class="logo mx-auto">
+          </a>
       </div>
       <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
@@ -107,8 +111,8 @@
         </ul>
       </div>
     </div>
-    <div class="row bg-white">
-      <nav class="navbar navbar-expand-lg navbar-light w-100">
+    <div class="row bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-light w-100" id="product-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
           aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -117,8 +121,25 @@
         {% include 'includes/main-nav.html' %}
       </nav>
     </div>
+    <div class="row bg-dark justify-content-center search-bar-sm">
+      <div class="search-bar">
+        <form method="GET" action="{% url 'products' %}">
+          <div class="input-group w-100">
+            <input class="form-control border border-black rounded-0" type="text" name="q"
+              placeholder="Search our site">
+            <div class="input-group-append">
+              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                <span class="icon">
+                  <i class="fas fa-search"></i>
+                </span>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
     <div id="delivery-banner" class="row text-center">
-      <div class="col bg-black text-white">
+      <div class="col bg-dark text-white">
         <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
       </div>
     </div>
