--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -80,7 +80,7 @@
             </div>
         </li>
     </ul>
-    <ul class="list-unstyled d-lg-flex my-1 col-4">
+    <ul class="list-unstyled d-lg-flex my-1 col-4 justify-content-end">
         <li class="nav-item">
             <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="{% url 'faqs' %}" id="specials-link">
                 FAQs
