--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
       </div>
     </div>
     <div id="delivery-banner" class="row text-center">
-      <div class="col bg-dark text-white">
+      <div class="col delivery-banner text-white">
         <h4 class="logo-font my-1">Free delivery on orders over £{{ free_delivery_threshold }}!</h4>
       </div>
     </div>
