--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,10 +1,10 @@
 {% load static %}
 
-<div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav col-8">
-        <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All Products
+<div class="collapse navbar-collapse d-lg-flex justify-content-between" id="main-nav">
+    <ul class="navbar-nav">
+        <li class="nav-item dropdown text-white">
+            <a class="logo-font font-weight-bold nav-link mr-5 text-white" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Products
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="all-products-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
@@ -15,7 +15,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="guitars-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="guitars-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Guitars
             </a>
             <div class="dropdown-menu border-0 bg-dark" aria-labelledby="guitars-link">
@@ -27,16 +27,16 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="guitars-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="amps-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Amps
             </a>
-            <div class="dropdown-menu border-0 bg-dark" aria-labelledby="guitars-link">
+            <div class="dropdown-menu border-0 bg-dark" aria-labelledby="amps-link">
                 <a href="{% url 'products' %}?category=amps" class="dropdown-item">All Amps</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="pedals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white mr-5" href="#" id="pedals-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Pedals
             </a>
             <div class="dropdown-menu border-0 scrollable-dropdown bg-dark" aria-labelledby="pedals-link">
@@ -69,10 +69,10 @@
         </li>
 
         <li class="nav-item dropdown bg-dark">
-            <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-white" href="#" id="accessories-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Accessories
             </a>
-            <div class="dropdown-menu border-0 bg-dark" aria-labelledby="specials-link">
+            <div class="dropdown-menu border-0 bg-dark" aria-labelledby="accessories-link">
                 <a href="{% url 'products' %}?subcategory=straps" class="dropdown-item">Guitar Straps</a>
                 <a href="{% url 'products' %}?subcategory=plectrums" class="dropdown-item">Plectrums</a>
                 <a href="{% url 'products' %}?subcategory=capos" class="dropdown-item">Capos</a>
@@ -80,19 +80,19 @@
             </div>
         </li>
     </ul>
-    <ul class="list-unstyled d-lg-flex my-1 col-4 justify-content-end">
+    <ul class="list-unstyled d-lg-flex my-1 col-4 justify-content-end services-links">
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="{% url 'faqs' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white other-nav-links" href="{% url 'faqs' %}" id="specials-link">
                 FAQs
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="{% url 'contact' %}" id="specials-link">
-                Contact Us
+            <a class="logo-font font-weight-bold nav-link text-white other-nav-links" href="{% url 'contact' %}" id="specials-link">
+                Contact
             </a>
         </li>
         <li class="nav-item">
-            <a class="logo-font font-weight-bold nav-link text-black other-nav-links" href="{% url 'newsletter' %}" id="specials-link">
+            <a class="logo-font font-weight-bold nav-link text-white other-nav-links" href="{% url 'newsletter' %}" id="specials-link">
                 Newsletter
             </a>
         </li>
