--- a/templates/base.html
+++ b/templates/base.html
@@ -52,10 +52,10 @@
         <div class="search-bar">
           <form method="GET" action="{% url 'products' %}">
             <div class="input-group w-100">
-              <input class="form-control border border-black rounded-0" type="text" name="q"
+              <input class="form-control" type="text" name="q"
                 placeholder="Search our site">
               <div class="input-group-append">
-                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                <button class="form-control btn" type="submit">
                   <span class="icon">
                     <i class="fas fa-search"></i>
                   </span>
@@ -125,10 +125,10 @@
       <div class="search-bar">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
-            <input class="form-control border border-black rounded-0" type="text" name="q"
+            <input class="form-control" type="text" name="q"
               placeholder="Search our site">
             <div class="input-group-append">
-              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+              <button class="form-control btn" type="submit">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
