--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-12 my-auto text-center logo-container">
-                <img src="{% static 'images/logo.jpg' %}" alt="" class="home-logo">
+                <img src="{% static 'images/logo.jpg' %}" alt="double-whammy-guitar-logo" class="home-logo">
             </div>
                 <div class="my-5 ml-3">
                     <h4>
