--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'products\css\products.css' %}">
+{% endblock %}
+
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -12,16 +16,20 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row my-lg-5">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if "placeholder" in product.image.url %}
-                <a href="">
-                    <img class="card-img-top img-fluid" src="{% static 'images\placeholder.png' %}" alt="{{ product.name }}">
+                <a href="https://www.crescendo.co.za/wp-content/uploads/2025/01/placeholder-guiter-image.png" target="_blank">
+                    <div class="product-image-container detail-image-container">
+                        <img class="card-img-top img-fluid product-image" src="{% static 'images\placeholder.png' %}" alt="{{ product.name }}">
+                    </div>
                 </a>
                 {% else %}
-                <a href="{{ product.image.url }}" target="_blank">
-                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                <a href="{% url 'product_detail' product.id %}">
+                    <div class="product-image-container detail-image-container {% if product.category.id == 1 %}guitar-detail{% endif %}">
+                        <img class="card-img-top img-fluid product-image" src="{{ product.image.url }}" alt="{{ product.name }}">
+                    </div>
                 </a>
                 {% endif %}
             </div>
@@ -30,25 +38,24 @@
             <div class="product-details-container mb-5 mt-md-5">
                 <h2 class="mb-0">{{ product.name }}</h2>
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                {% if product.category %}
                 <p class="small mt-1 mb-0">
-                    <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                        <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                    </a>
-                </p>
-                {% endif %}
-                {% if product.subcategory %}
-                <small class="text-muted">{{ product.subcategory.friendly_name }}</small>
-                {% else %}
-                {% endif %}
+                    {% if product.category %}
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        </a>
+                    {% endif %}
+                    {% if product.subcategory %}
+                        > <a class="text-muted" href="{% url 'products' %}?subcategory={{ product.subcategory.name }}">
+                            {{ product.subcategory.friendly_name }}
+                        </a>
+                    {% endif %}
                 {% if request.user.is_superuser %}
                     <small class="ml-3">
                         <a href="{% url 'edit_product' product.id %}">Edit</a> |
                         <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                     </small>
                 {% endif %}
-                
-                <h3>Product Description</h3>
+                <h3 class="my-3">Product Description</h3>
                 <hr>
                 <p class="mt-3">{{ product.description }}</p>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
@@ -59,7 +66,7 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0"
+                                        <button class="decrement-qty btn"
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
@@ -69,7 +76,7 @@
                                     <input class="form-control qty_input" type="number" name="quantity" value="1"
                                         min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0"
+                                        <button class="increment-qty btn"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
@@ -80,13 +87,13 @@
                             </div>
                         </div>
                         <div>
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <a href="{% url 'products' %}" class="btn btn-dark mt-5">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            <input type="submit" class="btn btn-orange text-uppercase mt-5" value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
