--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -51,7 +51,7 @@
                             {% csrf_token %}
                                 {{ form | crispy }}
                             <div class="text-right">
-                                <button class="btn btn-black rounded-0" type="submit">Add FAQ</button>
+                                <button class="btn btn-orange " type="submit">Add FAQ</button>
                             </div>
                         </form>
                     </div>      
