--- a/newsletter/templates/newsletter/newsletter.html
+++ b/newsletter/templates/newsletter/newsletter.html
@@ -21,8 +21,8 @@
                         {% csrf_token %}
                             {{ form | crispy }}
                         <div class="text-right">
-                            <a class="btn btn-outline-black rounded-0" href="{% url 'home' %}">Cancel</a>
-                            <button class="btn btn-black rounded-0" type="submit">Subscribe</button>
+                            <a class="btn btn-outline-black " href="{% url 'home' %}">Cancel</a>
+                            <button class="btn btn-orange " type="submit">Subscribe</button>
                         </div>
                     </form>
                 </div>      
